k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: novacommerce
  labels:
    environment: production
    platform: novacommerce-mesh
